--- a/Sigma.Api/Sigma.Api.csproj
+++ b/Sigma.Api/Sigma.Api.csproj
@@ -11,12 +11,16 @@
         <PackageReference Include="HotChocolate.Data.EntityFramework" Version="11.3.0" />
         <PackageReference Include="MediatR" Version="9.0.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Sigma.Core\Sigma.Core.csproj" />
       <ProjectReference Include="..\Sigma.Infrastructure\Sigma.Infrastructure.csproj" />
+      <ProjectReference Include="..\Sigma.Integrations\Sigma.Integrations.csproj" />
     </ItemGroup>
 
 </Project>
