Замена на apiScope

--- a/Sigma.Api/appsettings.Development.json
+++ b/Sigma.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=12345;Host=localhost;Port=5432;Database=investin;Pooling=true;Connection Lifetime=0;"
+    "DefaultConnection": "User ID=postgres;Password=12345;Host=localhost;Port=5432;Database=apidevsigma;Pooling=true;Connection Lifetime=0;"
   },
   
   "Logging": {
