--- a/Sigma.Api/Sigma.Api.csproj
+++ b/Sigma.Api/Sigma.Api.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="GraphQL.Server.Ui.Altair" Version="5.0.2" />
         <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="5.0.2" />
         <PackageReference Include="HotChocolate" Version="12.0.1" />
         <PackageReference Include="HotChocolate.AspNetCore" Version="12.0.1" />
