refactor sber report parsing

--- a/Sigma.Api/Sigma.Api.csproj
+++ b/Sigma.Api/Sigma.Api.csproj
@@ -23,6 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Sigma.Imports\Sigma.Imports.csproj" />
       <ProjectReference Include="..\Sigma.Infrastructure\Sigma.Infrastructure.csproj" />
       <ProjectReference Include="..\Sigma.Services\Sigma.Services.csproj" />
     </ItemGroup>
