--- a/Sigma.Services/Sigma.Services.csproj
+++ b/Sigma.Services/Sigma.Services.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sigma.Excel\Sigma.Excel.csproj" />
+    <ProjectReference Include="..\Sigma.Excel\Sigma.Imports.csproj" />
+    <ProjectReference Include="..\Sigma.Imports\Sigma.Imports.csproj" />
     <ProjectReference Include="..\Sigma.Integrations\Sigma.Integrations.csproj" />
   </ItemGroup>
 
