--- a/Sigma.Hangfire/appsettings.json
+++ b/Sigma.Hangfire/appsettings.json
@@ -11,5 +11,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IntegrationUrls": {
+    "Moex": {
+      "StockBoard": "https://iss.moex.com/iss/engines/stock/markets/shares/boards/TQBR/securities.json?iss.meta=off&iss.only=securities,marketdata",
+      "FondBoard": "https://iss.moex.com/iss/engines/stock/markets/shares/boards/TQTF/securities.json?iss.meta=off&iss.only=securities,marketdata",
+      "BondBoard": "https://iss.moex.com/iss/engines/stock/markets/bonds/boards/TQOB/securities.json?iss.meta=off&iss.only=securities,marketdata",
+      "Dividends": "http://iss.moex.com/iss/securities/{ticket}/dividends.json?iss.meta=off",
+      "Coupons": "https://iss.moex.com/iss/statistics/engines/stock/markets/bonds/bondization/{ticket}.json?from=%7BdateString%7D&iss.only=coupons,amortizations&iss.meta=off"
+    }
+  }
 }
