Получение истории цены актива

--- a/Sigma.Hangfire/appsettings.json
+++ b/Sigma.Hangfire/appsettings.json
@@ -18,7 +18,8 @@
       "FondBoard": "https://iss.moex.com/iss/engines/stock/markets/shares/boards/TQTF/securities.json?iss.meta=off&iss.only=securities,marketdata",
       "BondBoard": "https://iss.moex.com/iss/engines/stock/markets/bonds/boards/TQOB/securities.json?iss.meta=off&iss.only=securities,marketdata",
       "Dividends": "http://iss.moex.com/iss/securities/{ticket}/dividends.json?iss.meta=off",
-      "Coupons": "https://iss.moex.com/iss/statistics/engines/stock/markets/bonds/bondization/{ticket}.json?from=%7BdateString%7D&iss.only=coupons,amortizations&iss.meta=off"
+      "Coupons": "https://iss.moex.com/iss/statistics/engines/stock/markets/bonds/bondization/{ticket}.json?from=%7BdateString%7D&iss.only=coupons,amortizations&iss.meta=off",
+      "Candles": "http://iss.moex.com/iss/engines/stock/markets/shares/securities/{ticket}/candles.json?from={date}&interval={interval}&iss.meta=off"
     }
   }
 }
