--- a/Sigma.Api/Properties/launchSettings.json
+++ b/Sigma.Api/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "InvestIn.Api": {
+    "Sigma.Api": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
