--- a/Sigma.Hangfire/Properties/launchSettings.json
+++ b/Sigma.Hangfire/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "InvestIn.Hangfire": {
+    "Sigma.Hangfire": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
